# todoing

./: .gitignore  Cargo.toml
frontend/todoing-tui/: Cargo.toml
frontend/todoing-tui/src/: app.rs  main.rs  theme.rs  tui.rs
migrations/: 20240215101425_tasks.sql
src/: lib.rs  main.rs
src/database/: mod.rs
src/task/: mod.rs
