workspace = { members = ["frontend/todoing-tui"] }
[package]
name = "todoing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
clap = "4.5.0"
sqlx = { version = "0.7.3", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
